// Path: crates/ipc/proto/public.proto
syntax = "proto3";
package ioi.public.v1;

import "blockchain.proto";

service PublicApi {
  // Submit a transaction to the mempool/ingestion queue.
  // Returns immediately with a receipt (hash).
  // Clients should poll GetTransactionStatus to check validity and inclusion.
  rpc SubmitTransaction (SubmitTransactionRequest) returns (SubmitTransactionResponse);

  // Check the status of a transaction hash.
  rpc GetTransactionStatus (GetTransactionStatusRequest) returns (GetTransactionStatusResponse);

  // Proxy queries to the underlying Workload state (Merklized proof).
  rpc QueryState (ioi.blockchain.v1.QueryStateAtRequest) returns (ioi.blockchain.v1.QueryStateAtResponse);

  // Queries the raw state value directly from the latest committed state.
  // Useful for testing and simple lookups where proofs are not required.
  rpc QueryRawState (ioi.blockchain.v1.QueryRawStateRequest) returns (ioi.blockchain.v1.QueryRawStateResponse);

  // Get the current status of the chain (Height, etc).
  rpc GetStatus (ioi.blockchain.v1.GetStatusRequest) returns (ioi.blockchain.v1.GetStatusResponse);

  // Get a block by its height.
  rpc GetBlockByHeight (GetBlockByHeightRequest) returns (GetBlockByHeightResponse);
}

message SubmitTransactionRequest {
    // Canonical SCALE-encoded bytes of the transaction.
    bytes transaction_bytes = 1;
}

message SubmitTransactionResponse {
    // SHA-256 hash of the accepted transaction (hex encoded).
    string tx_hash = 1;
}

// Status lookup request
message GetTransactionStatusRequest {
  // The hex-encoded SHA-256 hash of the transaction bytes.
  string tx_hash = 1;
}

// Transaction lifecycle status
enum TxStatus {
  UNKNOWN = 0;
  PENDING = 1;      // In ingestion queue, waiting for validation
  IN_MEMPOOL = 2;   // Passed validation, waiting for block inclusion
  COMMITTED = 3;    // Included in a block
  REJECTED = 4;     // Failed validation (see error_message)
}

// Status lookup response
message GetTransactionStatusResponse {
  TxStatus status = 1;
  // If REJECTED, this contains the reason (e.g. "Nonce too low", "Bad signature")
  string error_message = 2;
  // If COMMITTED, the block height containing the transaction
  uint64 block_height = 3;
}

message GetBlockByHeightRequest {
  uint64 height = 1;
}

message GetBlockByHeightResponse {
  // Canonical SCALE-encoded bytes of the Block. Empty if not found.
  bytes block_bytes = 1;
}